# traingame

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  main.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
src/: game.py  player.py
src/traingame/: __version__.py  cli.py  game.py  player.py  training.py  visualize.py
src/traingame/config/: config-feedforward  config-feedforward-assen-speed.cfg  config-feedforward-assen.cfg  config-feedforward2  config-feedforwardspeed.cfg
src/traingame/models/: almost_better.pickle  assen-127.pickle  finish-assen-distance.pickle  finish-assen-speed.pickle
