[bumpversion]
current_version = 0.1.0
commit = True
message = Bump version: {current_version} --> {new_version}
tag = True
tag_name = v{new_version}

#[metadata]  # TODO: replace MANIFEST.in with this block

[bdist_wheel]
universal = 1

[bumpversion:file:src/traingame/__version__.py]
search = __version__={current_version}
replace = {new_version}
